# weather

./: .cdsapirc.tpl  .gitignore  README.md  era.py  hrrr.py  open_data_access.py  plotting.py  pyproject.toml  raw_data_ingestion.py  work.py
utils/: auth.py
