

[project]
name = "weather"
version = "0.1.0"
description = "I want to do some cool stuff with weather data"
authors = [
    {name = "Matt Livingston", email =  "mwl5399@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "requests >= 2.31.0",
    "pandas >= 2.1.4",
    "boto3 >= 1.34.153",
    "xarray>=2025.1.0",
    "grib2io>=2.3.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.5",
]
