[project]
name = "weather"
version = "0.1.0"
description = "I want to do some cool stuff with weather data"
authors = [
    {name = "Matt Livingston", email =  "mwl5399@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests >= 2.31.0",
    "boto3 >= 1.34.153",
    "xarray>=2025.1.0",
    "grib2io>=2.3.0",
    "httpx>=0.28.1",
    "cdsapi>=0.7.5",
    "onepassword-sdk>=0.1.6",
    "asyncio>=3.4.3",
    "cfgrib>=0.9.15.0",
    "dask>=2025.1.0",
    "netcdf4>=1.7.2",
    "pandas==2.3.0",
    "onepasswordtools",
    "zarr[gpu,remote]==3.0.8",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "ruff>=0.6.5",
]

[tool.uv.sources]
onepasswordtools = { git = "ssh://git@github.com/MattTheMeteo/onepasswordtools", tag = "v0.1.0" }
